ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: atlantis
    meta.helm.sh/release-namespace: atlantis
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: atlantis
    app.kubernetes.io/managed-by: Helm
    chart: atlantis-4.1.0
    heritage: Helm
    release: atlantis
  name: atlantis
  namespace: atlantis
spec:
  rules:
  - host: atlantis.tino.sh
    http:
      paths:
      - backend:
          service:
            name: atlantis
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - atlantis.tino.sh
    secretName: atlantis-tino-sh-tls
